修改排版问题

--- a/movie/templates/movie_list.html
+++ b/movie/templates/movie_list.html
@@ -15,15 +15,23 @@
 </div>
 <table class="table table-bordered">
   <tr>
-    <th>来源</th>
+    <th>编号</th>
     <th>名称</th>
+    <th>来源</th>
     <th>网址</th>
     <th>下载地址</th>
   </tr>
   <tr>
-    <td>hello</td>
-    <td>hello</td>
-    <td>hello</td>
-    <td>hello</td>
+    {% for movie in object_list %}
+    <td> {{ forloop.counter }} </td>
+    <td>{{  movie.name }}</td>
+    <td>{{ movie.source }}</td>
+    <td>{{  movie.url }}</td>
+    <td>
+      {% for href in movie.down_urls %}
+      <a href="{{ href }}"> {{ forloop.counter }} </a>
+      {% endfor %}
+    </td>
+    {% endfor %}
   </tr>
 </table>
