--- a/movie/templates/movie_list.html
+++ b/movie/templates/movie_list.html
@@ -41,13 +41,17 @@
 <div class="pagination">
   <span class="page-links">
     {% if page_obj.has_previous %}
-    <a href="/cars?page={{ page_obj.previous_page_number }}">previous</a>
+    <a href="{% url 'movie_list' %}?page={{ page_obj.previous_page_number }}">
+      <span> prev</span>
+    </a>
     {% endif %}
     <span class="page-current">
       Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}.
     </span>
     {% if page_obj.has_next %}
-    <a href="/cars?page={{ page_obj.next_page_number }}">next</a>
+    <a href="{% url 'movie_list' %}?page={{ page_obj.next_page_number }}">
+      <span> next</span>
+    </a>
     {% endif %}
   </span>
 </div>
