--- a/movie/templates/movie_list.html
+++ b/movie/templates/movie_list.html
@@ -5,10 +5,10 @@
 
 <h1 class="text-center"> 电影资源 </h1>
 <div class="text-center">
-<form class="form-inline">
+<form class="form-inline" method="GET" action="{% url 'movie_list' %}">
   <div class="form-group">
     <label for="exampleInputName2">电源名称</label>
-    <input type="text" class="form-control" id="exampleInputName2" placeholder="三国">
+    <input name="q" type="text" class="form-control" id="exampleInputName2" placeholder="三国">
   </div>
   <button type="submit" class="btn btn-default">搜索</button>
 </form>
