--- a/movie/templates/movie_list.html
+++ b/movie/templates/movie_list.html
@@ -26,7 +26,7 @@
     <tr>
     <td> {{ forloop.counter }} </td>
     <td>{{  res.movie.name }}</td>
-    <td>{{ res.source }}</td>
+    <td>{{ res.get_source_display }}</td>
     <td>{{  res.url }}</td>
     <td>
       {% for href in res.download_urls %}
