修改显示的问题

--- a/movie/templates/movie_list.html
+++ b/movie/templates/movie_list.html
@@ -27,7 +27,9 @@
     <td> {{ forloop.counter }} </td>
     <td>{{  res.movie.name }}</td>
     <td>{{ res.get_source_display }}</td>
-    <td>{{  res.url }}</td>
+    <td>
+      <a href="{{ res.url }}">{{  res.url }}</a>
+    </td>
     <td>
       {% for href in res.download_urls %}
       <a href="{{ href }}"> {{ forloop.counter }} </a>
