--- a/movie/templates/movie_list.html
+++ b/movie/templates/movie_list.html
@@ -49,7 +49,7 @@
     {% endlocaltime %}
     <td>
       {% for href in res.down_urls %}
-      <a href="{{ href }}"> {{ forloop.counter }} </a>
+      <a class="down-url" data-zclip-text="{{ href }}" href="javascript:void(0)"> {{ forloop.counter }} </a>
       {% endfor %}
     </td>
     {% endfor %}
@@ -75,4 +75,9 @@
   </span>
 </div>
 {% endif %}
+{% load staticfiles %}
+<script src="//7xnnj6.com1.z0.glb.clouddn.com/js-jquery.min.js"></script>
+<script src={% static "js/jquery.zeroclipboard.js" %}></script>
+<script src={% static "js/movie_list.js" %}></script>
+
 {% endblock %}
